--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.password=f36ad7012123889f93f164dcdfcaebb0e7744898abdba32adbfcc
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # drop n create table, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.hibernate.ddl-auto= update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
